# 25-LDTH-Relocalisation

./: .gitignore  README.md  evaluate_estimations.py  fetch_image_by_latlon.py  pyproject.toml  run_eval.sh
data/example/: eiffel_search_in_area_pair.txt  eiffel_tower_pair.txt  estimations.csv  estimations_generated_superpoint_superglue.csv  test_localization_results.csv  truth.csv
data/example/images/: eiffel_tower_refined_search_area.json  eiffel_tower_search_area.json
data/example/images/test/: test_images_truth.csv
data/example/superglue_output/: eiffel_tower_example_eiffel_tower_freshly_fetched_matches.npz
data/example/superglue_search_output/: eiffel_tower_example_eiffel_tower_search_area_satellite_matches.npz
data/example/test/: estimations.csv  truth.csv
data/test/: estimations.csv
data/test/Competition Release/: Reading_4_cleaned_search_area.json  Rickmansworth_2_cleaned_search_area.json
src/: create_search_area_json.py  debug_truth_visualization.py  downsample_image.py  estimate_location_from_matches.py  feature_matching_baseline.py  fetch_search_area_image.py  generate_random_test_images.py  generate_uav_test_images.py  localize_image.py  naive_baseline.py  run_direct_localization_batch.py  sift_baseline.py  ssim_baseline.py  superpoint_superglue_matching.py  visualize_feature_matching.py
src/archive/: analyze_match_strength.py  batch_localize_test_images.py  create_search_area_json.py
src/utility/: bounding_box.py  create_staticmap_tiles.py  epsg_4326_to_3035.py  get_satellite_image.py
