[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "25-ldth-relocalisation"
version = "0.1.0"
description = ""
authors = [
    { name = "Arondite" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "tabulate",
]

