[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "25-ldth-relocalisation"
version = "0.1.0"
description = ""
authors = [
    { name = "Arondite" }
]
license =  "MIT" 
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "matplotlib>=3.7.5",
    "owslib>=0.31.0",
    "pillow>=10.4.0",
    "pyproj>=3.5.0",
    "shapely>=2.0.7",
    "tabulate",
]

[tool.setuptools]
packages = ["src"]
